# python-package-create-sample

./: README.md
funniest/: MANIFEST.in  README.rst  entry_points.cfg  setup.cfg
funniest/funniest/: command_line.py
funniest/funniest/tests/: test_command_line.py  test_joke.py
usage/: Pipfile  a.py
