[metadata]
name = funniest
version = attr: funniest.__version__.__version__
license = MIT
description = 'The funniest joke in the world'
long_description = file: README.rst
keywords = 'funniest joke comedy flying circus'
url = 'http://github.com/storborg/funniest'
author = 'Flying Circus'
author_email='flyingcircus@example.com'

[options]
packages=
    funniest
install_requires =
    markdown

entry_points = file: entry_points.cfg
test_suite = 'nose.collector'
tests_require =
    nose
    nose-cover3

include_package_data = True
zip_safe = False
